# Makar

./: Cargo.toml  LICENSE
protocol/: Cargo.toml
protocol/src/: lib.rs
proxy/: Cargo.toml
proxy/src/: connection.rs  main.rs  packet.rs  players.rs  protocol.rs  server.rs
proxy/src/packet/: mod.rs
proxy/src/protocol/: chat.rs  mod.rs  primitive.rs  string.rs  title.rs  varlen.rs
proxy/src/versions/: mod.rs  v1_8_8.rs
server/: Cargo.toml
server/src/: main.rs
