[package]
name = "makar-server"
version = "0.1.0"
edition = "2021"

[dependencies]
makar-protocol = { path = "../protocol" }

tokio = { version = "1", features = ["net", "sync", "io-util", "bytes", "rt-multi-thread", "macros"] }
bytes = "1"

uuid = { version = "1", features = ["v4", "fast-rng"] }

log = "0.4"
env_logger = "0.11"
